addItem working on mobile devices, similar key bug fixed

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,6 +1,5 @@
 
 .cart{
-    margin-top: 7rem;
     width: 100%;
     height: 100%;
     display: flex;
